PUT mapping works + styling